istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: carservice
spec:
  hosts:
    - "*"
  gateways:
    - carservice-gateway
  http:
    - match:
        - uri:
            prefix: /carservice
      rewrite:
        uri: /
      route:
        - destination:
            host: carservice
            port:
              number: 8080
